--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@testing-library/user-event": "^12.1.10",
     "@web3-react/core": "^6.1.1",
     "@web3-react/injected-connector": "^6.0.7",
+    "bitcoinjs-lib": "^5.2.0",
+    "coininfo": "^5.1.0",
     "ethers": "^5.0.26",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropdown": "^1.9.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
