--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@web3-react/core": "^6.1.1",
     "@web3-react/injected-connector": "^6.0.7",
     "bitcoinjs-lib": "^5.2.0",
+    "blockcypher-unofficial": "^1.5.0",
     "coininfo": "^5.1.0",
     "ethers": "^5.0.26",
     "react": "^17.0.1",
