--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@web3-react/core": "^6.1.1",
     "@web3-react/injected-connector": "^6.0.7",
+    "bip66": "^1.1.5",
     "bitcoinjs-lib": "^5.2.0",
     "browser-request": "^0.3.3",
     "coininfo": "^5.1.0",
