--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bcrypto": "^5.4.0",
     "bitcoinjs-lib": "^5.2.0",
     "browser-request": "^0.3.3",
     "coininfo": "^5.1.0",
