--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.1",
     "react-dropdown": "^1.9.1",
     "react-scripts": "4.0.1",
+    "react-st-modal": "^1.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
