--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "tunnel": "ngrok http 3000",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
