--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "coininfo": "^5.1.0",
     "ethers": "^5.0.26",
     "react": "^17.0.1",
+    "react-device-detect": "^1.15.0",
     "react-dom": "^17.0.1",
     "react-dropdown": "^1.9.1",
     "react-scripts": "4.0.1",
