--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "coininfo": "^5.1.0",
     "ethers": "^5.0.26",
     "react": "^17.0.1",
+    "react-app-rewired": "^2.1.8",
     "react-device-detect": "^1.15.0",
     "react-dom": "^17.0.1",
     "react-dropdown": "^1.9.1",
@@ -27,9 +28,9 @@
   },
   "scripts": {
     "tunnel": "ngrok http 3000",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
